Add Blacktop Basketball (Recess) game at /recess
- Built Phaser 3 game deployed to recess/ subfolder
- Added game card to homepage arcade grid
- Game features: half-court, two cartoon players, virtual joystick controls

--- a/index.html
+++ b/index.html
@@ -186,6 +186,23 @@
         </a>
       </article>
 
+      <!-- Blacktop Basketball -->
+      <article class="game-card">
+        <div class="game-tag">Game 03</div>
+        <h2 class="game-title">Blacktop Basketball</h2>
+        <p class="game-subtitle">
+          1v1 arcade basketball on the Hillview blacktop. Split-screen on one iPad — grab a friend.
+        </p>
+        <div class="pill-row">
+          <span class="pill">1v1</span>
+          <span class="pill">Split-Screen</span>
+          <span class="pill">iPad</span>
+        </div>
+        <a class="play-button" href="recess/">
+          Hit the Court <span>▶</span>
+        </a>
+      </article>
+
       <!-- Hillview Teacher Simulator -->
       <article class="game-card">
         <div class="game-tag">Game 02</div>
