Add Blacktop Hockey card to arcade landing page

--- a/index.html
+++ b/index.html
@@ -203,6 +203,23 @@
         </a>
       </article>
 
+      <!-- Blacktop Hockey -->
+      <article class="game-card">
+        <div class="game-tag">Game 04</div>
+        <h2 class="game-title">Blacktop Hockey</h2>
+        <p class="game-subtitle">
+          1v1 arcade hockey on the Hillview ice. Slap shots, body checks, and goalie saves.
+        </p>
+        <div class="pill-row">
+          <span class="pill">1v1</span>
+          <span class="pill">Split-Screen</span>
+          <span class="pill">iPad</span>
+        </div>
+        <a class="play-button" href="hockey/">
+          Hit the Ice <span>▶</span>
+        </a>
+      </article>
+
       <!-- Hillview Teacher Simulator -->
       <article class="game-card">
         <div class="game-tag">Game 02</div>
