Add Blacktop Baseball card to homepage

--- a/index.html
+++ b/index.html
@@ -220,6 +220,24 @@
         </a>
       </article>
 
+      
+      <!-- Blacktop Baseball -->
+      <article class="game-card">
+        <div class="game-tag">Game 05</div>
+        <h2 class="game-title">Blacktop Baseball</h2>
+        <p class="game-subtitle">
+          Top-down arcade baseball on the Hillview diamond. Swing for the fences with home runs, base hits, and strikeouts.
+        </p>
+        <div class="pill-row">
+          <span class="pill">1v1</span>
+          <span class="pill">Swing Meter</span>
+          <span class="pill">iPad</span>
+        </div>
+        <a class="play-button" href="baseball/">
+          Step Up to Bat <span>▶</span>
+        </a>
+      </article>
+
       <!-- Hillview Teacher Simulator -->
       <article class="game-card">
         <div class="game-tag">Game 02</div>
